Fixed bootstrap horizontal scrollbar

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -10,11 +10,6 @@ body, html
     padding: 0;
 }
 
-.container-fluid
-{
-    padding : 0;
-}
-
 
 #header
 {
